--- a/images/procedures.html
+++ b/images/procedures.html
@@ -373,8 +373,7 @@ code {
     participant c as sprite-create
     participant y as Mapbox Studio
     participant z as gh-pages
-    db->>x: GeoJSON
-    x->>a: GeoJSON
+    db->>a: GeoJSON
     Note over a: tippecanoe on vt-map(Docker)
     a->>x: mbtiles
     x->>b: mbtiles
